# parla-experimental

./: .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  bench.py  build.sh  calculate_synthetic_ideal_time.py  context_test.py  discussion_parray.md  environment.yml  graph.data.yaml  graph.tasks.yaml  launch_nvtx_bench.sh  makefile  mkdocs.yml  multidevice_discussion.py  portable_bench.py  pyproject.toml  quicksort_crosspy.py  quicksort_manual.py  quicksort_parray.py  ruff.toml  setup.py  simple_scaling.py  simpletest.py  submit_synthetic_task.slm  test.py  test_env.py  test_graphs.py  test_new_graphs.py  test_queue.py  test_rl.py  test_rl_a2a.py  test_rl_gcn.py  test_sim.py  test_sim2.py
.github/workflows/: build-check.yml  build_check.yml  format_with_ruff.yml  lint_cpp.yml  lint_cython.yml  lint_python.yml
backup/: bench.py  context_test.py  devices_sample.YAML  quicksort_crosspy_2.py  simple_md.py  simpletest.py  test_env.py
backup/mdbench/: launcher.sh
benchmark/compare/: args.txt  launch_nvtx_bench.sh  portable_bench.py
benchmark/python/: benchmark.py  benchmark_taskspace.py  benchmark_using_googlebench.py  generating.sh  quicksort_mdevice.py  start_benchmark-100KB.sh  start_benchmark-10MB.sh  start_benchmark.sh
docs/: README.md
docs/runtime/: index.md
docs/site/: index.html
docs/source/: conf.py  index.rst
envs/: README.md  frontera.yml
example/: 2_gpu_jacobi.py  bench.py  cholesky_gpu_automatic.py  jacobi_2D.py  kmeans.py  kmeans_cp.py  kmeans_gpu.py  kmeans_multi_gpu.py  kmeans_multi_gpu_v1.py  kmeans_new.py  kmeans_parla.py  quicksort_parray.py  test.py  test_async.py  test_barrier.py
example/quicksort/: README.md  common.py  common_parla.py  common_parla_manual.py  crosspy_quicksort.py  crosspy_quicksort_2.py  crosspy_quicksort_parla.py  crosspy_quicksort_parla_cupy.py  crosspy_quicksort_parla_parray.py  cupy_helper.py  cupy_quicksort.py  parray_quicksort.py  quicksort_crosspy.py  quicksort_cupy.py  quicksort_parla_crosspy.py  quicksort_parla_crosspy_cupy.py  quicksort_parla_crosspy_disasembled.py  quicksort_parla_crosspy_parray.py  quicksort_parla_cupy.py  quicksort_parla_cupy_parray.py  quicksort_parla_manual.py  quicksort_parla_parray.py  quicksort_parray.py.orig  test_crosspy.py
mdbench/: make_args.py  multidevice_bench.py
miniapps/: README.md  cholesky_ray.py  cholesky_ray_cpu.py  cholesky_ray_gpu.py
miniapps/independent-ffts/: CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
miniapps/independent-ffts/example/: develop.sh  submit.slm  submit_test.slm  test.sh  test_fft.py  test_parla_fft.py  test_wrapper.py
miniapps/independent-ffts/src/cufftmg/: CMakeLists.txt  __init__.py
miniapps/independent-ffts/src/cufftmg/cython/: CMakeLists.txt  core.pxd  core.pyx
miniapps/independent-ffts/src/impl/: CMakeLists.txt  cufftmg.cpp  cufftmg.hpp
miniapps/independent-ffts/test/: CMakeLists.txt  numpy_fft.py  run_tests.sh  test_crosspy.py
miniapps/independent-ffts/test/cpp/: CMakeLists.txt  test_1_GPU.cpp  test_2_GPU.cpp  test_4_GPU.cpp
miniapps/independent-ffts/test/data/: numpy_fft.py
miniapps/independent-ffts/test/python/: test_fft.py
miniapps/independent-gemm/: README.md
miniapps/kmeans/: kmeans_parla.py  kmeans_strong.csv  kmeans_weak.csv
miniapps/samplesort/: all_ppop1.txt  profile.py  run.sh  sample_sort.py  sample_sort_atomic.py  sample_sort_cupy.py  sample_sort_parla.py
miniapps/single_device_synthetics/: README
src/: dev.patch
src/c/backend/: CMakeLists.txt  backend.cpp  backend.hpp  device.cpp  device_manager.cpp  memory_manager.cpp  parray.cpp  parray_state.cpp  parray_tracker.cpp  phases.cpp  phases.cpp.orig  phases.cpp.rej  policy.cpp  resource_requirements.cpp  resource_requirements.hpp  resources.cpp  rl_environment.cpp  rl_task_mapper.cpp  scheduler.cpp  sleep.cu  task.cpp
src/c/backend/impl_cuda/: utility.cu
src/c/backend/impl_hip/: utility.hip
src/c/backend/impl_none/: utility.cpp
src/c/backend/include/: .parray_tracker.hpp.swo  atomic_wrapper.hpp  barrier.hpp  containers.hpp  device.hpp  device_contexts.hpp  device_manager.hpp  device_queues.hpp  events.hpp  gpu_utility.hpp  memory_manager.hpp  parray.hpp  parray_state.hpp  parray_tracker.hpp  phases.hpp  phases_BACKUP_20095.hpp  phases_LOCAL_20095.hpp  phases_REMOTE_20095.hpp  policy.hpp  profiling.hpp  resource_requirements.hpp  resources.hpp  rl_environment.hpp  rl_task_mapper.hpp  rl_utils.h  runtime.hpp  sleep.h  utility.hpp
src/python/modtest/cython/: CMakeLists.txt  core.pxd  core.pyx
src/python/parla/cython/: .tasks.pyx.swo  CMakeLists.txt  core.pxd  core.pyx  cyparray.pxd  cyparray.pyx  cyparray_state.pxd  cyparray_state.pyx  device.pxd  device.pyx  device_manager.pxd  device_manager.pyx  example.py  mm.pxd  mm.pyx  parray_tracker.pxd  resources.pxd  scheduler.pyx  sleep.pxd  sleep.pyx  stream_pool.pxd  stream_pool.pyx  tasks.pyx  variants.pyx
testing/: CMakeLists.txt  run_tests.sh
testing/c/: CMakeLists.txt  test_cpp.cpp
testing/python/: cholesky.py  cholesky_args.txt  cholesky_driver.py  cholesky_gpu.py  cholesky_gpu_automatic.py  cholesky_gpu_manual.py  devices_sample.YAML  launcher.py  test_await.py  test_cholesky.py  test_device_config_yaml_reader.py  test_duplicate_task.py  test_index.py  test_manual_movement.py  test_memory_counter.py  test_parray.py  test_parray_tracker.py  test_parray_tracker_using_xpy.py  test_resources.py  test_synthetic.py  test_task.py  test_task_mapping_policy.py  test_task_mapping_policy_locality.py  test_task_return.py  test_variants.py  test_xpy.py
tests/: test_devices.py
tutorial/: example1.py  example10.py  example11.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  profiling.py
unittests/: CMakeLists.txt
unittests/c/: CMakeLists.txt  test_cpp.cpp
unittests/python/: test_cpp.py  test_cython.py  test_device_config_yaml_reader.py  test_python.py  test_synthetic.py  test_task.py  test_taskspace.py
utility/: graphs.py  load.py  networkx_utility.py  threads.py  types.py  visualize.py
(+4111 files in other folders)
