[build-system]
requires = ["scikit-build-core>=0.5", "pyyaml", "cython"]
build-backend = "scikit_build_core.build"

[project]
name = "parla"
version = "0.3.1"
maintainers = [
    { name = "William Ruys", email = "will.ruys@gmail.com" },
    { name = "Hochan Lee", email = "hochan@utexas.edu" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["psutil", "pyyaml", "cython"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build"
wheel.packages = ["src/python/parla"]
wheel.license-files = []
cmake.minimum-version = "3.26.1"
cmake.args = []
cmake.define = {}
ninja.minimum-version = "1.11"


[project.optional-dependencies]
gpu = ["cupy>=9.2"]

[tool.ruff]
extend-ignore = ["F841", "401"]
